@@ -1,3 +1,13 @@
+2019-01-22  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        Another build fix after r240292
+        https://bugs.webkit.org/show_bug.cgi?id=193580
+        <rdar://problem/47457742>
+
+        Unreviewed, still not enough to fix soup builds, but closer.
+
+        * UIProcess/API/APIHTTPCookieStore.h:
+
 2019-01-22  Alex Christensen  <achristensen@webkit.org>
 
         Fix some builds after r240292
